@@ -15,5 +15,4 @@
   </tr>
   <% end -%>
 </table>
-
 <%= will_paginate @photos %>
