@@ -1,5 +1,6 @@
 * 1.1
 
+* Add simple formatting to changeset messages.  See http://forum.activereload.net/forums/9/topics/148
 * Add post-commit hook API
 * Fix bug with building permissions with anonymous users. [yrashk]
 * replace lame Importer lib with ruby-sequel for db access
